public/menu.css
/* ... */
.items .toastedvanillaoatshakenespresso ~ div{
    background-color: rgb(223, 229, 114);
}
.items.espresso .cappuccino{
    background-color: rgb(211, 207, 186);
}
.items .cappuccino ~ div{
    background-color: rgb(224, 250, 251);
}
.items.espresso .caramelmacchiatto{
    background: rgb(151, 96, 183);;
}
.items.espresso .caramelmacchiatto~div{
    background: rgb(199, 159, 109);;
}
.items.blended div{
    background-color: rgb(201, 180, 153);;;
}
.items.blended .mochacookiecrumblefrappucino~div{
    background: rgb(224, 250, 251);
}
.items.blended div.blendedstrawberrylemonade{
    background-color: yellow;
}
.items.brewed{
    grid-template-areas: 
    'a b c d .'
    'e f g h i'
    'j k l m .'
    'n o p . .'
    '. . . . q'
    'r s t u v'
    ;
}
.items.brewed div,.drinkPicker .items.brewed div.pikeplaceroast{
    background-color: #a58e81;
}
.items.brewed div.pouroverdarkroast, .drinkPicker .items.brewed div.darkroast{
    background-color: rgb(188, 154, 188);
}
.items.brewed div.pouroverblonderoast,.drinkPicker .items.brewed div.blonderoast{
    background-color: #eac784;
}
.items.brewed div.pouroverblonderoast~div,.drinkPicker .items.brewed div.decafpikeplaceroast{
    background: #6cb8d4;
}
.items.brewed div.icedcoffeerefill~div{
    background: #a1d5e8;
}
.items.brewed div.chocolatecreamcoldbrew~div{
    background-color: #baad9d;
}

/*###################################### */
/* Tea Design Properties :*/
/*###################################### */
.items.tea{
    
    display:grid;
    grid-template-columns: repeat(5, 18%);
    grid-template-rows: repeat(6,14%);
    grid-row-gap: 2%;
    grid-column-gap:2%;
    justify-content: center;
    align-content: center;
    
}
.items.tea{
    grid-template-areas: 
    'a b c d e'
    'f g h i j'
    'k l m n o'
    '. . . . .'
    'p q r . .'
    's t u v w'
    ;
}


.items.tea div {
    background-color:#ebe1a2;
}
.items.tea div+div {
    background-color:#aedd88;
}
.items.tea div+div+div {
    background-color:#bbae8a
}
.items.tea div+div+div+div+div {
    background-color:#d0d16d
}
.items.tea .customtealatte~div {
    background-color:#6cb8d4;
}
.items.tea .customicedtea~div {
    background-color:#ece93b;
}
.items.tea .customtealemonade~div {
    background-color:#bbae8a;
}
.items.tea .chaitea~div {
    background-color:#aae6ba;
}
.items.tea div.honeycitrusminttea  {
    background-color:#efed93;
}

.pickedDrinks div{
    width:100%;
    display:flex;
    justify-content: flex-start;
    flex-wrap: wrap;
}
.customerArea{
    text-align: center;
}
.pickedDrinks div div{
    -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
   border:none;
   outline: none;
   background: none;
   width:auto;
   width:77.5%;
   
}
.pickedDrinks .sizeIdentifier{
    width:6.5%;
    padding-right: 1.2em;
}
.selected{
    background: #95d2e9;
}
.pickedDrinks .modifier{
    width:100%;
    padding-left: 10%;
}
.extras{
    display:flex;
    justify-content: space-evenly;
    
    height:10.5%;
    width:100%;
    margin-left: 2%;
    align-items: flex-start;
}
.extras div{
    display: flex;
    justify-content: center;
    align-items: center;
    color:white;
    font-size: 1em;
    
    background-image: linear-gradient(rgb(118, 118, 118),rgb(56, 48, 48)40%);
    width:15.666%;
    border: 1px solid black;
    border-radius: 10%;
    height:90%;
}
.extras div.hidden{
    opacity: 0;
}
.extras .nextDrink.active{
    background-image: linear-gradient(rgb(158, 185, 136),green 40%);
}
.icedArea{
    padding-right:.2em;
}
@media only screen and (min-width: 900px) {
    *{
        font-size: initial;
        border-width: 1px;
    }
    .screen .buttons .LOCK {
        margin:1% 4%;
        height:45%;
        width:24%;
    }
    .items div{
        border-width: 1px;
    }
    .regular div{
        height: 28px;
        font-size: .7em;
    }
    .quantity{
        font-size: 1em;
    }
    body .menuWrapper{
            height: 800px;
            background-color: green;
            display: flex;
            position: relative;
            width: 900px;
            padding-top: 0;
            border: 10px solid black;
        
    }
    body{
        margin:0;
        display:flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
    }
    .sections>div div+div.selected {
        height: 0%;
        width: 0%;
        border-radius: 0px;
        background: none;
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        border-top: 12px solid rgb(255, 255, 255);
        opacity: 1;
    }
    .sections>div div+div {
        height: 0%;
        width: 0%;
        border-radius: 0px;
        background: none;
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        border-top: 12px solid rgb(255, 255, 255);
        opacity: 0;
    }
    .statusLight{
        width: 1.2em;
        height:1.2em;

    }
    
  }

footer.hidden{
    display:none;
}

